Oprava názvů, použití Stream<Integer> místo IntStream.